testing/errors/subst6.a
	*=$1000
	!set inner = 6
	!set outer = 7
	; substitutions cannot be nested
base?(?(inner)outer)	nop	; -> "no string given", "syntax error"
